--- a/Ado.Net.Tests/Ado.Net.Tests.csproj
+++ b/Ado.Net.Tests/Ado.Net.Tests.csproj
@@ -21,4 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ADO.NET\ADO.NET.csproj" />
+  </ItemGroup>
 </Project>
